# lesya_and_moa

./: .env_example  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  _db.sqlite3  pyproject.toml  requirements.txt
backend/api/: backends.py  constants.py  email.py  mixins.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/news/: admin.py  models.py
backend/news/migrations/: 0001_initial.py  0002_alter_news_options.py
backend/tasks/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_name_alter_taskanswer_is_correct.py  0004_alter_taskanswer_is_started.py
backend/templates/email/: password_reset.html
backend/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_data_processing_agreement_and_more.py  0003_alter_user_email_alter_user_username.py  0004_alter_user_username.py  0005_remove_user_username.py  0006_alter_user_managers.py  0007_alter_child_user_id_alter_childrengroup_user_id.py  0008_rename_user_id_child_user_and_more.py  0009_alter_user_email_alter_user_tasks_type.py
