[tool.poetry]
name = "lesya-and-moa"
version = "0.1.0"
description = ""
authors = ["Alexander <therealchistykov@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
